# trustpoint-client

./: .gitignore  AUTHORS.md  README.md  abc.pem  cred.p12  pyproject.toml  requirements.txt  setup.py  test-cert.p12  trust-store.pem  xyz.p12
.github/: pull_request_template.md
.github/workflows/: python-publish.yml
docs/source/: commands.rst  conf.py  index.rst  quickstart.rst  requirements.txt  tmp.txt
tests/: __init__.py  domains.py
trustpoint_client/: __init__.py  __main__.py  aoki.py  api.py  callback_test.py  certificate_management.py  cli.py  cli_cmp.py  enums.py  key.py  mdns.py  oid.py  revpi_led.py  rpi_led.py  schema.py  test.py  toki.py  trustpoint_client.py
trustpoint_client/api/: __init__.py  base.py  config.py  credential.py  credentials.py  decorator.py  domain.py  domains.py  exceptions.py  idevid.py  init.py  mdns.py  oid.py  onboard.py  provision.py  purge.py  req.py  schema.py  trustpoint.py  util.py  zero_touch_aoki.py
trustpoint_client/api/schema/: __init__.py  config.py  inventory.py
trustpoint_client/cli/: __init__.py  config.py  credential.py  credentials.py  decorator.py  del.py  demo.py  disable.py  domain.py  domains.py  enable.py  export.py  get_file_path.py  idevid.py  init.py  list.py  mdns.py  onboard.py  onboarding.py  provision.py  purge.py  renew.py  req.py  revoke.py  status.py  trust_stores.py  util.py  version.py  zero_touch.py
trustpoint_client/cmp/: cmp_client.py  crypto_utils.py  openssl_assembler.py
trustpoint_client/demo/: callback_demo_leds.py  revpi_led.py  rpi_led.py
