[project]
name = "trustpoint-client"
version = "0.1.0"
description = "Trustpoint Client Software"
authors = [{ name = "TrustPoint-Project" }]
requires-python = "~=3.10"
readme = "README.md"

dependencies = [
    "click>=8.1.8",
    "cryptography>=44.0.0",
    "mypy>=1.15.0",
    "platformdirs>=4.3.6",
    "prettytable>=3.14.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "ruff>=0.9.4",
    "trustpoint-devid-module>=0.2.3",
    "zeroconf>=0.143.0",
]

[dependency-groups]
dev = [
    "docutils-stubs>=0.0.22",
    "furo>=2024.8.6",
    "pillow>=11.1.0",
    "sphinx>=8.1.3",
    "sphinx-click>=6.0.0",
    "sphinxcontrib-plantuml>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", "ANN102", "ANN401",
    "D203", "D213", "D415",
    "TD003",
    "FIX",
    "COM812",               # Not compatible with the formatter
    "ISC001"                # Not compatible with the formatter
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"


# TODO(Alex): Remove this if we want to use the LED sections
[tool.ruff.lint.per-file-ignores]
"revpi_led.py" = ["ERA001"]
"rpi_led.py" = ["ERA001"]

[tool.poetry.scripts]
trustpoint-client = "trustpoint_client.__main__:cli"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


